fix: update swagger and api docs
